k8s/trillo/manifest/deploy-ds.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trillo-ds
  namespace: $namespace
  labels:
    app: trillo-ds
    app.kubernetes.io/name: "$APP_INSTANCE_NAME"
spec:
  replicas: 2
  template:
    metadata:
      name: trillo-ds
      namespace: $namespace
      labels:
        app: trillo-ds
    spec:
      containers:
      - name: trillo-ds
        image: $trilloDSImage
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8030
            name: trillo-ds
        volumeMounts:
          - name: trillo-repo
            mountPath: /trillo-repo
        livenessProbe:
          initialDelaySeconds: 180
          httpGet:
            scheme: HTTPS
            port: 8030
            path: /_healthcheck
      - image: gcr.io/cloud-marketplace-tools/metering/ubbagent
        name: ubbagent
        volumeMounts:
          - name: ubbagent-config
            mountPath: /etc/ubbagent
          - name: ubbagent-state
            mountPath: /var/lib/ubbagent
      volumes:
        - name: ubbagent-config
          configMap:
            name: agent-config
        - name: ubbagent-state
          emptyDir: {}
        - name: trillo-repo
          nfs:
            server: repo-nfs.$namespace.svc.cluster.local
            path: /
  selector:
    matchLabels:
      app: trillo-ds
---
apiVersion: v1
kind: Service
metadata:
  name: trillo-ds
  namespace: $namespace
  labels:
    app.kubernetes.io/name: "$APP_INSTANCE_NAME"
spec:
  selector:
    app: trillo-ds
  ports:
    - name: https
      port: 443
      targetPort: 8030
      protocol: TCP
  type: ClusterIP # Internal
