k8s/trillo/manifest/deploy-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: $namespace
  labels:
    app: mysql
    app.kubernetes.io/name: "$APP_INSTANCE_NAME"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      name: mysql
      namespace: $namespace
      labels:
        app: mysql
    spec:
      containers:
        - image: gcr.io/cloud-marketplace-containers/google/mysql5
          args:
            - "--ignore-db-dir=lost+found"
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-volumeclaim
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: $namespace
  labels:
    app: mysql
    app.kubernetes.io/name: "$APP_INSTANCE_NAME"
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: mysql
