k8s/trillo/manifest/deploy-nfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repo-nfs
  namespace: $namespace
  labels:
    app.kubernetes.io/name: "$APP_INSTANCE_NAME"
    app: repo-nfs
spec:
  replicas: 1
  template:
    metadata:
      name: repo-nfs
      namespace: $namespace
      labels:
        app: repo-nfs
    spec:
      containers:
      - name: repo-nfs
        image: gcr.io/google_containers/volume-nfs:0.8
        ports:
          - name: nfs
            containerPort: 2049
          - name: mountd
            containerPort: 20048
          - name: rpcbind
            containerPort: 111
        securityContext:
          privileged: true
        volumeMounts:
          - name: trillo-repo
            mountPath: /exports
      volumes:
        - name: trillo-repo
          persistentVolumeClaim:
            claimName: repo-volumeclaim
  selector:
    matchLabels:
      app: repo-nfs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appdata-nfs
  namespace: $namespace
  labels:
    app.kubernetes.io/name: "$APP_INSTANCE_NAME"
    app: appdata-nfs
spec:
  replicas: 1
  template:
    metadata:
      name: appdata-nfs
      namespace: $namespace
      labels:
        app: appdata-nfs
    spec:
      containers:
      - name: appdata-nfs
        image: gcr.io/google_containers/volume-nfs:0.8
        ports:
          - name: nfs
            containerPort: 2049
          - name: mountd
            containerPort: 20048
          - name: rpcbind
            containerPort: 111
        securityContext:
          privileged: true
        volumeMounts:
          - name: trillo-appdata
            mountPath: /exports
      volumes:
        - name: trillo-appdata
          persistentVolumeClaim:
            claimName: appdata-volumeclaim
  selector:
    matchLabels:
      app: appdata-nfs
---
apiVersion: v1
kind: Service
metadata:
  name: repo-nfs
  namespace: $namespace
  labels:
    app.kubernetes.io/name: "$APP_INSTANCE_NAME"
spec:
  selector:
    app: repo-nfs
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
  type: ClusterIP # Internal

---
apiVersion: v1
kind: Service
metadata:
  name: appdata-nfs
  namespace: $namespace
  labels:
    app.kubernetes.io/name: "$APP_INSTANCE_NAME"
spec:
  selector:
    app: appdata-nfs
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
  type: ClusterIP # Internal
