k8s/trillo/manifest/deploy-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trillo-redis
  namespace: $namespace
  labels:
    app.kubernetes.io/name: "$APP_INSTANCE_NAME"
    app: trillo-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trillo-redis
  template:
    metadata:
      name: trillo-redis
      namespace: $namespace
      labels:
        app: trillo-redis
    spec:
      containers:
        - image: gcr.io/google-containers/redis
          name: trillo-redis
          command:
            - "redis-server"
          args:
            - "--requirepass"
            - "$redisCachePassword"
            - "--appendonly"
            - "yes"
          ports:
            - containerPort: 6379
              name: trillo-redis
          volumeMounts:
            - name: redis-persistent-storage
              mountPath: /data
      volumes:
        - name: redis-persistent-storage
          nfs:
            server: appdata-nfs.$namespace.svc.cluster.local
            path: /
---
apiVersion: v1
kind: Service
metadata:
  name: trillo-redis
  namespace: $namespace
  labels:
    app: trillo-redis
    app.kubernetes.io/name: "$APP_INSTANCE_NAME"
spec:
  type: ClusterIP
  ports:
    - port: 6379
  selector:
    app: trillo-redis
