k8s/trillo/manifest/deploy-ubbagent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubbagent
  namespace: $namespace
  labels:
    app: ubbagent
    app.kubernetes.io/name: "$APP_INSTANCE_NAME"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubbagent
  template:
    metadata:
      name: ubbagent
      namespace: $namespace
      labels:
        app: ubbagent
    spec:
      containers:
        - image: gcr.io/cloud-marketplace-tools/metering/ubbagent
          name: ubbagent
          volumeMounts:
            - name: ubbagent-config
              mountPath: /etc/ubbagent
            - name: ubbagent-state
              mountPath: /var/lib/ubbagent
      volumes:
        - name: ubbagent-config
          configMap:
            name: agent-config
        - name: ubbagent-state
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: ubbagent
  namespace: $namespace
  labels:
    app: ubbagent
    app.kubernetes.io/name: "$APP_INSTANCE_NAME"
spec:
  type: ClusterIP
  ports:
    - port: 6379
  selector:
    app: ubbagent
