k8s/trillo/manifest/rt-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $name-ingress
  namespace: $namespace
  labels:
    app.kubernetes.io/name: "$APP_INSTANCE_NAME"
  annotations:
    kubernetes.io/ingress.allow-http: "false" # disable HTTP
spec:
  tls:
  - hosts: $APP_INSTANCE_NAME-trillo-rt-svc.$NAMESPACE.svc.cluster.local
    secretName: $name-tls-secret
  rules:
  - http:
      paths:
        - path: /*
          backend:
            serviceName: trillo-rt
            servicePort: 443
